migrations added; login/registration added

--- a/ASP-.NET-test-proj-1/ASP-.NET-test-proj-1/Views/Account/Login.cshtml
+++ b/ASP-.NET-test-proj-1/ASP-.NET-test-proj-1/Views/Account/Login.cshtml
@@ -2,9 +2,9 @@
 
 <form asp-action="Login" method="post">
     <div>
-        <label asp-for="Username"></label>
-        <input asp-for="Username" />
-        <span asp-validation-for="Username"></span>
+        <label asp-for="Login"></label>
+        <input asp-for="Login" />
+        <span asp-validation-for="Login"></span>
     </div>
     <div>
         <label asp-for="Password"></label>
