--- a/ASP-.NET-test-proj-1/ASP-.NET-test-proj-1/Views/Account/Register.cshtml
+++ b/ASP-.NET-test-proj-1/ASP-.NET-test-proj-1/Views/Account/Register.cshtml
@@ -1,10 +1,15 @@
-﻿@model ASP_.NET_test_proj_1.ViewModels.LoginViewModel
+﻿@model ASP_.NET_test_proj_1.ViewModels.RegisterViewModel
 
-<form asp-action="Login" method="post">
+<form asp-action="Register" method="post">
     <div>
-        <label asp-for="Username"></label>
-        <input asp-for="Username" />
-        <span asp-validation-for="Username"></span>
+        <label asp-for="Login"></label>
+        <input asp-for="Login" />
+        <span asp-validation-for="Login"></span>
+    </div>
+    <div>
+        <label asp-for="Email"></label>
+        <input asp-for="Email" />
+        <span asp-validation-for="Email"></span>
     </div>
     <div>
         <label asp-for="Password"></label>
@@ -12,10 +17,11 @@
         <span asp-validation-for="Password"></span>
     </div>
     <div>
-        <label asp-for="RememberMe"></label>
-        <input asp-for="RememberMe" type="checkbox" />
+        <label asp-for="ConfirmPassword"></label>
+        <input asp-for="ConfirmPassword" type="password" />
+        <span asp-validation-for="ConfirmPassword"></span>
     </div>
-    <button type="submit">Login</button>
+    <button type="submit">Register</button>
 </form>
 
 @section Scripts {
