--- a/ASP-.NET-test-proj-1/ASP-.NET-test-proj-1/Views/Account/Login.cshtml
+++ b/ASP-.NET-test-proj-1/ASP-.NET-test-proj-1/Views/Account/Login.cshtml
@@ -1,22 +1,27 @@
 ﻿@model ASP_.NET_test_proj_1.ViewModels.LoginViewModel
 
-<form asp-action="Login" method="post">
-    <div>
-        <label asp-for="Login"></label>
-        <input asp-for="Login" />
-        <span asp-validation-for="Login"></span>
+<div class="container d-flex justify-content-center align-items-center min-vh-100">
+    <div class="card p-4 shadow" style="width: 100%; max-width: 400px;">
+        <h3 class="text-center">Login</h3>
+        <form asp-action="Login" method="post">
+            <div class="form-group">
+                <label asp-for="Login"></label>
+                <input asp-for="Login" class="form-control" />
+                <span asp-validation-for="Login" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Password"></label>
+                <input asp-for="Password" type="password" class="form-control" />
+                <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
+            <div class="form-group form-check">
+                <input asp-for="RememberMe" type="checkbox" class="form-check-input" />
+                <label asp-for="RememberMe" class="form-check-label"></label>
+            </div>
+            <button type="submit" class="btn btn-primary btn-block">Login</button>
+        </form>
     </div>
-    <div>
-        <label asp-for="Password"></label>
-        <input asp-for="Password" type="password" />
-        <span asp-validation-for="Password"></span>
-    </div>
-    <div>
-        <label asp-for="RememberMe"></label>
-        <input asp-for="RememberMe" type="checkbox" />
-    </div>
-    <button type="submit">Login</button>
-</form>
+</div>
 
 @section Scripts {
     @{
