--- a/ASP-.NET-test-proj-1/ASP-.NET-test-proj-1/Views/Account/Register.cshtml
+++ b/ASP-.NET-test-proj-1/ASP-.NET-test-proj-1/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model ASP_.NET_test_proj_1.ViewModels.RegisterViewModel
+﻿@model ASP_.NET_test_proj_1.ViewModels.Account.RegisterViewModel
 
 <div class="container d-flex justify-content-center align-items-center min-vh-100">
     <div class="card p-4 shadow" style="width: 100%; max-width: 400px;">
